# api/app/Http/Resources/Catalog/ProductListResource.php
@@ -4,17 +4,17 @@ namespace App\Http\Resources\Catalog;
 
 use Illuminate\Http\Resources\Json\JsonResource;
 use OpenApi\Attributes as OA;
-
 #[OA\Schema(
-    schema: 'BrandListResource',
+    schema: 'ProductListResource',
     type: 'object',
     properties: [
         new OA\Property(property: 'id', type: 'integer', example: 1),
-        new OA\Property(property: 'name', type: 'string', example: 'Apple'),
-        new OA\Property(property: 'slug', type: 'string', example: 'apple')
+        new OA\Property(property: 'name', type: 'string', example: 'Apple iPhone 17 Pro'),
+        new OA\Property(property: 'slug', type: 'string', example: 'apple-iphone-17-pro'),
+        new OA\Property(property: 'price', type: 'number', example: 999.99),
     ]
 )]
-class BrandListResource extends JsonResource
+class ProductListResource extends JsonResource
 {
     public function toArray($request): array
     {
@@ -22,6 +22,7 @@ class BrandListResource extends JsonResource
             'id' => $this->id,
             'name' => $this->name,
             'slug' => $this->slug,
+            'price' => $this->price,
         ];
     }
 }
