# api/app/Models/Product.php
@@ -2,11 +2,16 @@
 
 namespace App\Models;
 
+use Illuminate\Database\Eloquent\Builder;
 use Illuminate\Database\Eloquent\Model;
 use Illuminate\Database\Eloquent\Relations\BelongsTo;
+use Spatie\Sluggable\HasSlug;
+use Spatie\Sluggable\SlugOptions;
 
 class Product extends Model
 {
+    use HasSlug;
+    
     protected $fillable = [
         'name',
         'slug',
@@ -27,14 +32,22 @@ class Product extends Model
         return $this->belongsTo(ProductGroup::class);
     }
 
-    public function scopeActive($query)
+    public function scopeActive($query): Builder
     {
         return $query->where('is_active', true)
+            ->where('price', '>', 0)
             ->whereHas('productGroup', function ($query) {
                 $query->where('is_active', true)
                     ->whereHas('brand', function ($query) {
                         $query->where('is_active', true);
                     });
             });
+    }
+
+    public function getSlugOptions(): SlugOptions
+    {
+        return SlugOptions::create()
+            ->generateSlugsFrom('name')
+            ->saveSlugsTo('slug');
     }
 }
